--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<header>
 								<h1>I'm a <strong>Frontend Professional</strong>.</h1>
 							</header>
-							<p>Are You Looking For A New or Updated <strong>Website</strong>, Or a <strong>Frontend Developer</strong> for your organization?<!--<a href="#">AJ</a> for <a href="#">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>--></p>
+							<p>Looking For A <strong>New Website</strong> For Your Business, Or a <strong> Developer</strong> For Your Organization?<!--<a href="#">AJ</a> for <a href="#">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>--></p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -107,7 +107,7 @@
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!--<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 								<h3><a href="#">Tempus dolore</a></h3>
@@ -127,7 +127,7 @@
 								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
-						</div>
+						</div>-->
 					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
@@ -172,14 +172,16 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.twitter.com/eternalcode3" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								
+								<li><a href="https://www.linkedin.com/in/eternalgil" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+
+								<li><a href="https://www.github.com/eternalgil" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<!--
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!--
+								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
