--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>I'm a <strong>Frontend Professional</strong>.</h1>
+								<h1>Your <strong>Frontend Professional</strong>.</h1>
 							</header>
-							<p>Looking For A <strong>New Website</strong> For Your Business, Or a <strong> Developer</strong> For Your Organization?<!--<a href="#">AJ</a> for <a href="#">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>--></p>
+							<p>Ready For A <strong>New Website</strong>? Or Searching For A <strong> Frontend Developer</strong>?
+								<!--<a href="#">AJ</a> for <a href="#">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>--></p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
