--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Hector Gil</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css"/>
 	</head>
 	<body class="is-preload">
 
@@ -36,7 +36,7 @@
 							</header>
 							<p>Ready For A <strong>New Website</strong>? Or Searching For A <strong> Frontend Developer</strong>?
 								<!--<a href="#">AJ</a> for <a href="#">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>--></p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<a href="#work" class="button large scrolly">Are You Ready For Your Website?</a>
 						</div>
 					</div>
 				</div>
@@ -46,35 +46,35 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>Envision Your Design.</h2>
+						<p>And Expand Your Web Presence and Clientele.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Consult | Colaborate</h3>
+								<p>A colaborative and consoltative approach in producing responsive Website Designs.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Proposal | Creation</h3>
+								<p>Expectations and terms are outlined in the proposal and our team begins the production of a creative web design. </p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Launch | Support</h3>
+								<p>Experience confidence in the form of ongoing support after the project is delivered and launched.</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<p>Design | Production | Launch</p>
+						<a href="#portfolio" class="button large scrolly">Recent Work</a>
 					</footer>
 				</div>
 			</article>
@@ -83,29 +83,29 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Design Templates</h2>
+						<p>Our template gallery incudes a Hair Salon Site, Marketing Email and Linktree.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">BOX ONE</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Hair Salon</a></h3>
+								<p>We can launch your online presence and create options that will allow clients to book online appointments/reservations.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Marketing Email</a></h3>
+								<p>Our services may also include custom marketing emails to share your e-commerce or service website.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Linktree</a></h3>
+								<p>Fast way to get begin an online presence.</p>
 							</article>
 						</div>
 						<!--<div class="col-4 col-6-medium col-12-small">
@@ -131,8 +131,8 @@
 						</div>-->
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
+						<p>We Build Local & Global Presence</p>
+						<a href="#contact" class="button large scrolly">Contact Me</a>
 					</footer>
 				</div>
 			</article>
@@ -141,8 +141,8 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Contact Me, Begin Your Website Design</h2>
+						<p>We Bring The Web To You!</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
