--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
+<html lang="en">
 <!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
 -->
 <html>
 	<head>
-		<title>Hector Gil</title>
-		<meta charset="utf-8" />
+		<title>Hector Gil Portfolio</title>
+		<meta charset="utf-8"/>
+		<meta name="description" content="This is a portfolio site for Hector Gil and it includes examples as freelance software developer.">
+		<meta name="description" content="Buffalo New York">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css"/>
 	</head>
@@ -16,10 +17,10 @@
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#top" alt="Returns you to the Top of the Navigation">Top</a></li>
+					<li><a href="#work" alt="I offer web design services to individuals and organizations.">Work</a></li>
+					<li><a href="#portfolio" alt="Website Templates you can chose">Portfolio</a></li>
+					<li><a href="#contact" alt="Contact form and social media web links you can find me at.">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -28,7 +29,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/bg-me.png" alt="" /></span>
+							<span class="image fit"><img src="images/bg-me.png" alt="Incredibly Smart and Very Good Looking Man" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -36,7 +37,7 @@
 							</header>
 							<p>Ready For A <strong>New Website</strong>? Or Searching For A <strong> Frontend Developer</strong>?
 								<!--<a href="#">AJ</a> for <a href="#">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>--></p>
-							<a href="#work" class="button large scrolly">Are You Ready For Your Website?</a>
+							<a href="#work" alt="Research a website and pick a template" class="button large scrolly">Are You Ready For Your Website?</a>
 						</div>
 					</div>
 				</div>
@@ -53,8 +54,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
-								<h3>Consult | Colaborate</h3>
-								<p>A colaborative and consoltative approach in producing responsive Website Designs.</p>
+								<h3>Consult | Collaborate</h3>
+								<p>A collaborative and consoltative approach in producing responsive Website Designs.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -74,7 +75,7 @@
 					</div>
 					<footer>
 						<p>Design | Production | Launch</p>
-						<a href="#portfolio" class="button large scrolly">Recent Work</a>
+						<a href="#portfolio" alt="Recent Projects for Hector Gil" class="button large scrolly">Recent Work</a>
 					</footer>
 				</div>
 			</article>
@@ -89,21 +90,21 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" alt="Hair Salon Template" class="image featured"><img src="images/pic01.jpg" alt="hair salon landing page" /></a>
 								<h3><a href="#">Hair Salon</a></h3>
 								<p>We can launch your online presence and create options that will allow clients to book online appointments/reservations.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" alt="Email template" class="image featured"><img src="images/pic02.jpg" alt="email landing page" /></a>
 								<h3><a href="#">Marketing Email</a></h3>
 								<p>Our services may also include custom marketing emails to share your e-commerce or service website.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#" alt="Linktree linking client's social media and business" class="image featured"><img src="images/pic03.jpg" alt="linktree landing page" /></a>
 								<h3><a href="#">Linktree</a></h3>
 								<p>Fast way to get begin an online presence.</p>
 							</article>
@@ -173,11 +174,11 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="https://www.twitter.com/eternalcode3" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.twitter.com/eternalcode3" alt="Twitter Account for Hector Gil" class="icon brands fa-twitter" alt="twitter icon image"><span class="label" for="Twitter Social">Twitter</span></a></li>
 								
-								<li><a href="https://www.linkedin.com/in/eternalgil" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/eternalgil" alt="LinkedIn Account for Hector Gil" class="icon brands fa-linkedin-in" alt="linkedin icon image"><span class="label" for="Linkedin Social">LinkedIn</span></a></li>
 
-								<li><a href="https://www.github.com/eternalgil" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.github.com/eternalgil" alt="Github Account for Hector Gil" class="icon brands fa-github" alt="github icon image" for="Github Social"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
